k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdas-svc
  namespace: rdas
  labels:
    app: rdas
spec:
  type: ClusterIP
  selector:
    app: rdas
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
